content/_generated-doc/2.7/config/quarkus-reactive-mssql-client.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-mssql-client_configuration]]link:#quarkus-reactive-mssql-client_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-reactive-mssql-client_quarkus.datasource.reactive.mssql.packet-size]]`link:#quarkus-reactive-mssql-client_quarkus.datasource.reactive.mssql.packet-size[quarkus.datasource.reactive.mssql.packet-size]`

[.description]
--
The desired size (in bytes) for TDS packets.
--|int 
|


a| [[quarkus-reactive-mssql-client_quarkus.datasource.reactive.mssql.ssl]]`link:#quarkus-reactive-mssql-client_quarkus.datasource.reactive.mssql.ssl[quarkus.datasource.reactive.mssql.ssl]`

[.description]
--
Whether SSL/TLS is enabled.
--|boolean 
|`false`


h|[[quarkus-reactive-mssql-client_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-reactive-mssql-client_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a| [[quarkus-reactive-mssql-client_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size]]`link:#quarkus-reactive-mssql-client_quarkus.datasource.-datasource-name-.reactive.mssql.packet-size[quarkus.datasource."datasource-name".reactive.mssql.packet-size]`

[.description]
--
The desired size (in bytes) for TDS packets.
--|int 
|


a| [[quarkus-reactive-mssql-client_quarkus.datasource.-datasource-name-.reactive.mssql.ssl]]`link:#quarkus-reactive-mssql-client_quarkus.datasource.-datasource-name-.reactive.mssql.ssl[quarkus.datasource."datasource-name".reactive.mssql.ssl]`

[.description]
--
Whether SSL/TLS is enabled.
--|boolean 
|`false`

|===